--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-project",
   "version": "0.0.1",
   "description": "desafio gifs",
-  "productName": "Quasar App",
+  "productName": "Ache seu gif",
   "author": "LucasFranciscon <82523661+LucasFranciscon@users.noreply.github.com>",
   "type": "module",
   "private": true,
@@ -17,7 +17,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
-    "pinia": "^2.0.11",
+    "pinia": "^2.3.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
